--- a/IDE/Object_Editor/langs/languages.xml
+++ b/IDE/Object_Editor/langs/languages.xml
@@ -55,6 +55,7 @@
     <sentence id="51" label="title">Title</sentence>
     <sentence id="52" label="info">Info</sentence>
     <sentence id="53" label="rmattr">Remove Attribute</sentence>
+    <sentence id="54" label="apply">Apply</sentence>
 </language>
 <language id="RU" label="Русский">
     <sentence id="0" label="file">Файл</sentence>
@@ -111,5 +112,6 @@
     <sentence id="51" label="title">Заголовок</sentence>
     <sentence id="52" label="info">Информация</sentence>
     <sentence id="53" label="rmattr">Убрать атрибут</sentence>
+    <sentence id="54" label="apply">Apply</sentence>
 </language>
 </root>
