git-svn-id: http://svn.vdombox.ru/flextools/trunk@374 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Object_Editor/langs/languages.xml
+++ b/IDE/Object_Editor/langs/languages.xml
@@ -1,119 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <root>
-<language id="EN" label="English">
-    <sentence id="0" label="file">File</sentence>
-    <sentence id="1" label="lxml">Load XML</sentence>
-    <sentence id="2" label="close">Close</sentence>
-    <sentence id="3" label="languages">Languages</sentence>
-    <sentence id="4" label="english">English</sentence>
-    <sentence id="5" label="french">French</sentence>
-    <sentence id="6" label="russian">Russian</sentence>
-    <sentence id="7" label="help">Help</sentence>
-    <sentence id="8" label="about">About</sentence>
-    <sentence id="9" label="information">Information</sentence>
-    <sentence id="10" label="bscpref">Basic Preferens</sentence>
-    <sentence id="11" label="oname">Object Name</sentence>
-    <sentence id="12" label="id">ID</sentence>
-    <sentence id="13" label="dname">Display name</sentence>
-    <sentence id="14" label="icon">Icon</sentence>
-    <sentence id="15" label="eicon">Editor icon</sentence>
-    <sentence id="16" label="sicon">Structure icon</sentence>
-    <sentence id="17" label="descript">Description</sentence>
-    <sentence id="18" label="browse">Browse</sentence>
-    <sentence id="19" label="moveable">Moveable</sentence>
-    <sentence id="20" label="dynamic">Dynamic</sentence>
-    <sentence id="21" label="category">Category</sentence>
-    <sentence id="22" label="standart">Standart</sentence>
-    <sentence id="23" label="advanced">Advanced</sentence>
-    <sentence id="24" label="usual">Usual</sentence>
-    <sentence id="25" label="portal">Portal</sentence>
-    <sentence id="26" label="itype">Interface type</sentence>
-    <sentence id="27" label="rteditor">RichText Editor</sentence>
-    <sentence id="28" label="teditor">Text Editor</sentence>
-    <sentence id="29" label="picture">Picture</sentence>
-    <sentence id="30" label="spectable">Special Table</sentence>
-    <sentence id="31" label="version">Version</sentence>
-    <sentence id="32" label="optimprior">Optimization Priority</sentence>
-    <sentence id="33" label="containers">Containers</sentence>
-    <sentence id="34" label="extended">Extended</sentence>
-    <sentence id="35" label="attributes">Attributes</sentence>
-    <sentence id="36" label="addnewattr">Add new attribute</sentence>
-    <sentence id="37" label="attrprop">Attribute Properties</sentence>
-    <sentence id="38" label="name">Name</sentence>
-    <sentence id="39" label="defval">Default value</sentence>
-    <sentence id="40" label="regexpvld">Regular Expression Validation</sentence>
-    <sentence id="41" label="errvldmess">Error Validation Message</sentence>
-    <sentence id="42" label="visined">Visible in editor</sentence>
-    <sentence id="43" label="txtfld">Text field</sentence>
-    <sentence id="44" label="ddownmenu">Dropdown menu</sentence>
-    <sentence id="45" label="ocinterface">Open Code Interface</sentence>
-    <sentence id="46" label="clrch">Color chooser</sentence>
-    <sentence id="47" label="pglink">Page link</sentence>
-    <sentence id="48" label="objlist">Object list</sentence>
-    <sentence id="49" label="lnkbase">Link base</sentence>
-    <sentence id="50" label="exteditor">External editor</sentence>
-    <sentence id="51" label="title">Title</sentence>
-    <sentence id="52" label="info">Info</sentence>
-    <sentence id="53" label="rmattr">Remove Attribute</sentence>
-    <sentence id="54" label="apply">Apply</sentence>
-    <sentence id="55" label="restore">Restore</sentence>
-</language>
-<language id="RU" label="Русский">
-    <sentence id="0" label="file">Файл</sentence>
-    <sentence id="1" label="lxml">Загрузить XML</sentence>
-    <sentence id="2" label="close">Закрыть</sentence>
-    <sentence id="3" label="languages">Языки</sentence>
-    <sentence id="4" label="english">Английский</sentence>
-    <sentence id="5" label="french">Французский</sentence>
-    <sentence id="6" label="russian">Русский</sentence>
-    <sentence id="7" label="help">Помощь</sentence>
-    <sentence id="8" label="about">О программе</sentence>
-    <sentence id="9" label="information">Информация</sentence>
-    <sentence id="10" label="bscpref">Базовые параметры</sentence>
-    <sentence id="11" label="oname">Имя объекта</sentence>
-    <sentence id="12" label="id">ID</sentence>
-    <sentence id="13" label="dname">Отображаемое имя</sentence>
-    <sentence id="14" label="icon">Значок</sentence>
-    <sentence id="15" label="eicon">Значок в редакторе</sentence>
-    <sentence id="16" label="sicon">Структурный значок</sentence>
-    <sentence id="17" label="descript">Описание</sentence>
-    <sentence id="18" label="browse">Пролистать</sentence>
-    <sentence id="19" label="moveable">Перемещаемый</sentence>
-    <sentence id="20" label="dynamic">Динамический</sentence>
-    <sentence id="21" label="category">Категория</sentence>
-    <sentence id="22" label="standart">Стандартный</sentence>
-    <sentence id="23" label="advanced">Расширенный</sentence>
-    <sentence id="24" label="usual">Обычный</sentence>
-    <sentence id="25" label="portal">Главный</sentence>
-    <sentence id="26" label="itype">Тип интерфейса</sentence>
-    <sentence id="27" label="rteditor">RichText Editor</sentence>
-    <sentence id="28" label="teditor">Text Editor</sentence>
-    <sentence id="29" label="picture">Картинка</sentence>
-    <sentence id="30" label="spectable">Спец. таблица</sentence>
-    <sentence id="31" label="version">Версия</sentence>
-    <sentence id="32" label="optimprior">Приоритет оптимизации</sentence>
-    <sentence id="33" label="containers">Контейнеры</sentence>
-    <sentence id="34" label="extended">Расширенный</sentence>
-    <sentence id="35" label="attributes">Атрибуты</sentence>
-    <sentence id="36" label="addnewattr">Добавить новый атрибут</sentence>
-    <sentence id="37" label="attrprop">Свойства атрибута</sentence>
-    <sentence id="38" label="name">Название</sentence>
-    <sentence id="39" label="defval">Значение по умолчанию</sentence>
-    <sentence id="40" label="regexpvld">Проверка регулярным выражением</sentence>
-    <sentence id="41" label="errvldmess">Сообщение ошибки проверки</sentence>
-    <sentence id="42" label="visined">Виден в редакторе</sentence>
-    <sentence id="43" label="txtfld">Текстовое поле</sentence>
-    <sentence id="44" label="ddownmenu">Выпадающее меню</sentence>
-    <sentence id="45" label="ocinterface">Открыть редактор кода</sentence>
-    <sentence id="46" label="clrch">Цвет</sentence>
-    <sentence id="47" label="pglink">Ссылка на страницу</sentence>
-    <sentence id="48" label="objlist">Список объектов</sentence>
-    <sentence id="49" label="lnkbase">Link base</sentence>
-    <sentence id="50" label="exteditor">Внешний редактор</sentence>
-    <sentence id="51" label="title">Заголовок</sentence>
-    <sentence id="52" label="info">Информация</sentence>
-    <sentence id="53" label="rmattr">Убрать атрибут</sentence>
-    <sentence id="54" label="apply">Apply</sentence>
-    <sentence id="55" label="restore">Restore</sentence>
-</language>
+	<language label="EN" text="English"/>
+	<language label="RU" text="Russian"/>
 </root>
