git-svn-id: http://svn.vdombox.ru/flextools/trunk@391 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Object_Editor/langs/languages.xml
+++ b/IDE/Object_Editor/langs/languages.xml
@@ -2,4 +2,5 @@
 <root>
 	<language label="EN" text="English"/>
 	<language label="RU" text="Russian"/>
+	<language label="FR" text="French"/>
 </root>
