--- a/IDE/Object_Editor/langs/translation.xml
+++ b/IDE/Object_Editor/langs/translation.xml
@@ -61,6 +61,7 @@
     <sentence id="57" label="remove">Remove</sentence>
     <sentence id="58" label="cancel">Cancel</sentence>
     <sentence id="59" label="language">Language</sentence>
+    <sentence id="60" label="container">Container</sentence>
 </language>
 <language id="RU" label="Русский">
     <sentence id="0" label="file">Файл</sentence>
@@ -123,5 +124,6 @@
     <sentence id="57" label="remove">Убрать</sentence>
     <sentence id="58" label="cancel">Отмена</sentence>
     <sentence id="59" label="language">Язык</sentence>
+    <sentence id="60" label="container">Container</sentence>
 </language>
 </root>
