--- a/IDE/Object_Editor/langs/translation.xml
+++ b/IDE/Object_Editor/langs/translation.xml
@@ -62,6 +62,8 @@
     <sentence id="58" label="cancel">Cancel</sentence>
     <sentence id="59" label="language">Language</sentence>
     <sentence id="60" label="container">Container</sentence>
+    <sentence id="61" label="codeeditor">Code Editor</sentence>
+    <sentence id="62" label="back">Back</sentence>
 </language>
 <language id="RU" label="Русский">
     <sentence id="0" label="file">Файл</sentence>
@@ -124,6 +126,8 @@
     <sentence id="57" label="remove">Убрать</sentence>
     <sentence id="58" label="cancel">Отмена</sentence>
     <sentence id="59" label="language">Язык</sentence>
-    <sentence id="60" label="container">Container</sentence>
+    <sentence id="60" label="container">Контейнер</sentence>
+    <sentence id="61" label="codeeditor">Редактор кода</sentence>
+    <sentence id="62" label="back">Back</sentence>
 </language>
 </root>
