git-svn-id: http://svn.vdombox.ru/flextools/trunk@507 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Object_Editor/langs/languages.xml
+++ b/IDE/Object_Editor/langs/languages.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <root>
-	<language label="EN" text="English"/>
-	<language label="RU" text="Russian"/>
-	<language label="FR" text="French"/>
+	<language id="EN" label="English"/>
+	<language id="RU" label="Russian"/>
+	<language id="FR" label="French"/>
 </root>
