--- a/IDE/Object_Editor/langs/translation.xml
+++ b/IDE/Object_Editor/langs/translation.xml
@@ -1,157 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
 <root>
 <language id="EN" label="English">
-    <sentence id="0" label="file">File</sentence>
-    <sentence id="1" label="lxml">Load XML</sentence>
-    <sentence id="2" label="close">Close</sentence>
-    <sentence id="3" label="languages">Languages</sentence>
-    <sentence id="4" label="english">English</sentence>
-    <sentence id="5" label="french">French</sentence>
-    <sentence id="6" label="russian">Russian</sentence>
-    <sentence id="7" label="help">Help</sentence>
-    <sentence id="8" label="about">About</sentence>
-    <sentence id="9" label="information">Information</sentence>
-    <sentence id="10" label="bscpref">Basic Preferens</sentence>
-    <sentence id="11" label="oname">Object Name</sentence>
-    <sentence id="12" label="id">ID</sentence>
-    <sentence id="13" label="dname">Display name</sentence>
-    <sentence id="14" label="icon">Icon</sentence>
-    <sentence id="15" label="eicon">Editor icon</sentence>
-    <sentence id="16" label="sicon">Structure icon</sentence>
-    <sentence id="17" label="descript">Description</sentence>
-    <sentence id="18" label="browse">Browse</sentence>
-    <sentence id="19" label="moveable">Moveable</sentence>
-    <sentence id="20" label="dynamic">Dynamic</sentence>
-    <sentence id="21" label="category">Category</sentence>
-    <sentence id="22" label="standart">Standart</sentence>
-    <sentence id="23" label="advanced">Advanced</sentence>
-    <sentence id="24" label="usual">Usual</sentence>
-    <sentence id="25" label="portal">Portal</sentence>
-    <sentence id="26" label="itype">Interface type</sentence>
-    <sentence id="27" label="rteditor">RichText Editor</sentence>
-    <sentence id="28" label="teditor">Text Editor</sentence>
-    <sentence id="29" label="picture">Picture</sentence>
-    <sentence id="30" label="spectable">Special Table</sentence>
-    <sentence id="31" label="version">Version</sentence>
-    <sentence id="32" label="optimprior">Optimization Priority</sentence>
-    <sentence id="33" label="containers">Containers</sentence>
-    <sentence id="34" label="extended">Extended</sentence>
-    <sentence id="35" label="attributes">Attributes</sentence>
-    <sentence id="36" label="addnewattr">Add new attribute</sentence>
-    <sentence id="37" label="attrprop">Attribute Properties</sentence>
-    <sentence id="38" label="name">Name</sentence>
-    <sentence id="39" label="defval">Default value</sentence>
-    <sentence id="40" label="regexpvld">Regular Expression Validation</sentence>
-    <sentence id="41" label="errvldmess">Error Validation Message</sentence>
-    <sentence id="42" label="visined">Visible in editor</sentence>
-    <sentence id="43" label="txtfld">Text field</sentence>
-    <sentence id="44" label="ddownmenu">Dropdown menu</sentence>
-    <sentence id="45" label="ocinterface">Open Code Interface</sentence>
-    <sentence id="46" label="clrch">Color chooser</sentence>
-    <sentence id="47" label="pglink">Page link</sentence>
-    <sentence id="48" label="objlist">Object list</sentence>
-    <sentence id="49" label="lnkbase">Link base</sentence>
-    <sentence id="50" label="exteditor">External editor</sentence>
-    <sentence id="51" label="title">Title</sentence>
-    <sentence id="52" label="info">Info</sentence>
-    <sentence id="53" label="rmattr">Remove Attribute</sentence>
-    <sentence id="54" label="apply">Apply</sentence>
-    <sentence id="55" label="restore">Restore</sentence>
-    <sentence id="56" label="add">Add</sentence>
-    <sentence id="57" label="remove">Remove</sentence>
-    <sentence id="58" label="cancel">Cancel</sentence>
-    <sentence id="59" label="language">Language</sentence>
-    <sentence id="60" label="container">Container</sentence>
-    <sentence id="61" label="codeeditor">Code Editor</sentence>
-    <sentence id="62" label="back">Back</sentence>
-    <sentence id="63" label="tooltip">You must define an unique Object Name (only latin letters are possible!)</sentence>
-    <sentence id="64" label="tooltip">Unique identifier of this attribute, this identifier is an extension of the object identifier.</sentence>
-    <sentence id="65" label="message">Do you want to proceed?</sentence>
-    <sentence id="66" label="label">Delete Attribute</sentence>
-    <sentence id="67" label="message">Sorry, you have already have the same one</sentence>
-    <sentence id="68" label="label">Adding language</sentence>
-    <sentence id="69" label="message">Sorry, you can not remove the last Language</sentence>
-    <sentence id="70" label="label">Removing language</sentence>
-    <sentence id="71" label="length">Length</sentence>
-    <sentence id="72" label="tooltip">Opens an XML Code Editor. To use Code Interface you must change Interface Type to [Extended]</sentence>
-    <sentence id="73" label="displaytext">Display text</sentence>
-    <sentence id="74" label="value">Value</sentence>
+    <sentence id="a0" label="file">File</sentence>
+    <sentence id="a1" label="lxml">Load XML</sentence>
+    <sentence id="a2" label="close">Close</sentence>
+    <sentence id="a3" label="languages">Languages</sentence>
+    <sentence id="a4" label="english">English</sentence>
+    <sentence id="a5" label="french">French</sentence>
+    <sentence id="a6" label="russian">Russian</sentence>
+    <sentence id="a7" label="help">Help</sentence>
+    <sentence id="a8" label="about">About</sentence>
+    <sentence id="a9" label="information">Information</sentence>
+    <sentence id="a10" label="bscpref">Basic Preferens</sentence>
+    <sentence id="a11" label="oname">Object Name</sentence>
+    <sentence id="a12" label="id">ID</sentence>
+    <sentence id="a13" label="dname">Display name</sentence>
+    <sentence id="a14" label="icon">Icon</sentence>
+    <sentence id="a15" label="eicon">Editor icon</sentence>
+    <sentence id="a16" label="sicon">Structure icon</sentence>
+    <sentence id="a17" label="descript">Description</sentence>
+    <sentence id="a18" label="browse">Browse</sentence>
+    <sentence id="a19" label="moveable">Moveable</sentence>
+    <sentence id="a20" label="dynamic">Dynamic</sentence>
+    <sentence id="a21" label="category">Category</sentence>
+    <sentence id="a22" label="standart">Standart</sentence>
+    <sentence id="a23" label="advanced">Advanced</sentence>
+    <sentence id="a24" label="usual">Usual</sentence>
+    <sentence id="a25" label="portal">Portal</sentence>
+    <sentence id="a26" label="itype">Interface type</sentence>
+    <sentence id="a27" label="rteditor">RichText Editor</sentence>
+    <sentence id="a28" label="teditor">Text Editor</sentence>
+    <sentence id="a29" label="picture">Picture</sentence>
+    <sentence id="a30" label="spectable">Special Table</sentence>
+    <sentence id="a31" label="version">Version</sentence>
+    <sentence id="a32" label="optimprior">Optimization Priority</sentence>
+    <sentence id="a33" label="containers">Containers</sentence>
+    <sentence id="a34" label="extended">Extended</sentence>
+    <sentence id="a35" label="attributes">Attributes</sentence>
+    <sentence id="a36" label="addnewattr">Add new attribute</sentence>
+    <sentence id="a37" label="attrprop">Attribute Properties</sentence>
+    <sentence id="a38" label="name">Name</sentence>
+    <sentence id="a39" label="defval">Default value</sentence>
+    <sentence id="a40" label="regexpvld">Regular Expression Validation</sentence>
+    <sentence id="a41" label="errvldmess">Error Validation Message</sentence>
+    <sentence id="a42" label="visined">Visible in editor</sentence>
+    <sentence id="a43" label="txtfld">Text field</sentence>
+    <sentence id="a44" label="ddownmenu">Dropdown menu</sentence>
+    <sentence id="a45" label="ocinterface">Open Code Interface</sentence>
+    <sentence id="a46" label="clrch">Color chooser</sentence>
+    <sentence id="a47" label="pglink">Page link</sentence>
+    <sentence id="a48" label="objlist">Object list</sentence>
+    <sentence id="a49" label="lnkbase">Link base</sentence>
+    <sentence id="a50" label="exteditor">External editor</sentence>
+    <sentence id="a51" label="title">Title</sentence>
+    <sentence id="a52" label="info">Info</sentence>
+    <sentence id="a53" label="rmattr">Remove Attribute</sentence>
+    <sentence id="a54" label="apply">Apply</sentence>
+    <sentence id="a55" label="restore">Restore</sentence>
+    <sentence id="a56" label="add">Add</sentence>
+    <sentence id="a57" label="remove">Remove</sentence>
+    <sentence id="a58" label="cancel">Cancel</sentence>
+    <sentence id="a59" label="language">Language</sentence>
+    <sentence id="a60" label="container">Container</sentence>
+    <sentence id="a61" label="codeeditor">Code Editor</sentence>
+    <sentence id="a62" label="back">Back</sentence>
+    <sentence id="a63" label="tooltip">You must define an unique Object Name (only latin letters are possible!)</sentence>
+    <sentence id="a64" label="tooltip">Unique identifier of this attribute, this identifier is an extension of the object identifier.</sentence>
+    <sentence id="a65" label="message">Do you want to proceed?</sentence>
+    <sentence id="a66" label="label">Delete Attribute</sentence>
+    <sentence id="a67" label="message">Sorry, you have already have the same one</sentence>
+    <sentence id="a68" label="label">Adding language</sentence>
+    <sentence id="a69" label="message">Sorry, you can not remove the last Language</sentence>
+    <sentence id="a70" label="label">Removing language</sentence>
+    <sentence id="a71" label="length">Length</sentence>
+    <sentence id="a72" label="tooltip">Opens an XML Code Editor. To use Code Interface you must change Interface Type to [Extended]</sentence>
+    <sentence id="a73" label="displaytext">Display text</sentence>
+    <sentence id="a74" label="value">Value</sentence>
 </language>
 <language id="RU" label="Русский">
-    <sentence id="0" label="file">Файл</sentence>
-    <sentence id="1" label="lxml">Загрузить XML</sentence>
-    <sentence id="2" label="close">Закрыть</sentence>
-    <sentence id="3" label="languages">Языки</sentence>
-    <sentence id="4" label="english">Английский</sentence>
-    <sentence id="5" label="french">Французский</sentence>
-    <sentence id="6" label="russian">Русский</sentence>
-    <sentence id="7" label="help">Помощь</sentence>
-    <sentence id="8" label="about">О программе</sentence>
-    <sentence id="9" label="information">Информация</sentence>
-    <sentence id="10" label="bscpref">Базовые параметры</sentence>
-    <sentence id="11" label="oname">Имя объекта</sentence>
-    <sentence id="12" label="id">ID</sentence>
-    <sentence id="13" label="dname">Отображаемое имя</sentence>
-    <sentence id="14" label="icon">Значок</sentence>
-    <sentence id="15" label="eicon">Значок в редакторе</sentence>
-    <sentence id="16" label="sicon">Структурный значок</sentence>
-    <sentence id="17" label="descript">Описание</sentence>
-    <sentence id="18" label="browse">Пролистать</sentence>
-    <sentence id="19" label="moveable">Перемещаемый</sentence>
-    <sentence id="20" label="dynamic">Динамический</sentence>
-    <sentence id="21" label="category">Категория</sentence>
-    <sentence id="22" label="standart">Стандартный</sentence>
-    <sentence id="23" label="advanced">Расширенный</sentence>
-    <sentence id="24" label="usual">Обычный</sentence>
-    <sentence id="25" label="portal">Главный</sentence>
-    <sentence id="26" label="itype">Тип интерфейса</sentence>
-    <sentence id="27" label="rteditor">RichText Editor</sentence>
-    <sentence id="28" label="teditor">Text Editor</sentence>
-    <sentence id="29" label="picture">Картинка</sentence>
-    <sentence id="30" label="spectable">Спец. таблица</sentence>
-    <sentence id="31" label="version">Версия</sentence>
-    <sentence id="32" label="optimprior">Приоритет оптимизации</sentence>
-    <sentence id="33" label="containers">Контейнеры</sentence>
-    <sentence id="34" label="extended">Расширенный</sentence>
-    <sentence id="35" label="attributes">Атрибуты</sentence>
-    <sentence id="36" label="addnewattr">Добавить новый атрибут</sentence>
-    <sentence id="37" label="attrprop">Свойства атрибута</sentence>
-    <sentence id="38" label="name">Название</sentence>
-    <sentence id="39" label="defval">Значение по умолчанию</sentence>
-    <sentence id="40" label="regexpvld">Проверка регулярным выражением</sentence>
-    <sentence id="41" label="errvldmess">Сообщение ошибки проверки</sentence>
-    <sentence id="42" label="visined">Виден в редакторе</sentence>
-    <sentence id="43" label="txtfld">Текстовое поле</sentence>
-    <sentence id="44" label="ddownmenu">Выпадающее меню</sentence>
-    <sentence id="45" label="ocinterface">Открыть редактор кода</sentence>
-    <sentence id="46" label="clrch">Цвет</sentence>
-    <sentence id="47" label="pglink">Ссылка на страницу</sentence>
-    <sentence id="48" label="objlist">Список объектов</sentence>
-    <sentence id="49" label="lnkbase">Link base</sentence>
-    <sentence id="50" label="exteditor">Внешний редактор</sentence>
-    <sentence id="51" label="title">Заголовок</sentence>
-    <sentence id="52" label="info">Информация</sentence>
-    <sentence id="53" label="rmattr">Убрать атрибут</sentence>
-    <sentence id="54" label="apply">Применить</sentence>
-    <sentence id="55" label="restore">Вернуть</sentence>
-    <sentence id="56" label="add">Добавить</sentence>
-    <sentence id="57" label="remove">Убрать</sentence>
-    <sentence id="58" label="cancel">Отмена</sentence>
-    <sentence id="59" label="language">Язык</sentence>
-    <sentence id="60" label="container">Контейнер</sentence>
-    <sentence id="61" label="codeeditor">Редактор кода</sentence>
-    <sentence id="62" label="back">Назад</sentence>
-    <sentence id="63" label="tooltip">Вы должны выбрать уникальное имя для объекта (возможны только латинские символы!)</sentence>
-    <sentence id="64" label="tooltip">Уникальный идентификатор этого объекта</sentence>
-    <sentence id="65" label="message">Вы хотите продолжить операцию?</sentence>
-    <sentence id="66" label="label">Удалить атрибут</sentence>
-    <sentence id="67" label="message">Извините, вы уже имеете такой же.</sentence>
-    <sentence id="68" label="label">Добавление языка</sentence>
-    <sentence id="69" label="message">Извините, вы не можете удалить последний язык</sentence>
-    <sentence id="70" label="label">Удаление языка</sentence>
-    <sentence id="71" label="length">Длина</sentence>
-    <sentence id="72" label="tooltip">Открывает редактор кода XML. Чтобы использовать редактор кода, вы должны переключить Тип Интерфейса на [Расширенный]</sentence>
-    <sentence id="73" label="displaytext">Отображаемый текст</sentence>
-    <sentence id="74" label="value">Значение</sentence>
+    <sentence id="a0" label="file">Файл</sentence>
+    <sentence id="a1" label="lxml">Загрузить XML</sentence>
+    <sentence id="a2" label="close">Закрыть</sentence>
+    <sentence id="a3" label="languages">Языки</sentence>
+    <sentence id="a4" label="english">Английский</sentence>
+    <sentence id="a5" label="french">Французский</sentence>
+    <sentence id="a6" label="russian">Русский</sentence>
+    <sentence id="a7" label="help">Помощь</sentence>
+    <sentence id="a8" label="about">О программе</sentence>
+    <sentence id="a9" label="information">Информация</sentence>
+    <sentence id="a10" label="bscpref">Базовые параметры</sentence>
+    <sentence id="a11" label="oname">Имя объекта</sentence>
+    <sentence id="a12" label="id">ID</sentence>
+    <sentence id="a13" label="dname">Отображаемое имя</sentence>
+    <sentence id="a14" label="icon">Значок</sentence>
+    <sentence id="a15" label="eicon">Значок в редакторе</sentence>
+    <sentence id="a16" label="sicon">Структурный значок</sentence>
+    <sentence id="a17" label="descript">Описание</sentence>
+    <sentence id="a18" label="browse">Пролистать</sentence>
+    <sentence id="a19" label="moveable">Перемещаемый</sentence>
+    <sentence id="a20" label="dynamic">Динамический</sentence>
+    <sentence id="a21" label="category">Категория</sentence>
+    <sentence id="a22" label="standart">Стандартный</sentence>
+    <sentence id="a23" label="advanced">Расширенный</sentence>
+    <sentence id="a24" label="usual">Обычный</sentence>
+    <sentence id="a25" label="portal">Главный</sentence>
+    <sentence id="a26" label="itype">Тип интерфейса</sentence>
+    <sentence id="a27" label="rteditor">RichText Editor</sentence>
+    <sentence id="a28" label="teditor">Text Editor</sentence>
+    <sentence id="a29" label="picture">Картинка</sentence>
+    <sentence id="a30" label="spectable">Спец. таблица</sentence>
+    <sentence id="a31" label="version">Версия</sentence>
+    <sentence id="a32" label="optimprior">Приоритет оптимизации</sentence>
+    <sentence id="a33" label="containers">Контейнеры</sentence>
+    <sentence id="a34" label="extended">Расширенный</sentence>
+    <sentence id="a35" label="attributes">Атрибуты</sentence>
+    <sentence id="a36" label="addnewattr">Добавить новый атрибут</sentence>
+    <sentence id="a37" label="attrprop">Свойства атрибута</sentence>
+    <sentence id="a38" label="name">Название</sentence>
+    <sentence id="a39" label="defval">Значение по умолчанию</sentence>
+    <sentence id="a40" label="regexpvld">Проверка регулярным выражением</sentence>
+    <sentence id="a41" label="errvldmess">Сообщение ошибки проверки</sentence>
+    <sentence id="a42" label="visined">Виден в редакторе</sentence>
+    <sentence id="a43" label="txtfld">Текстовое поле</sentence>
+    <sentence id="a44" label="ddownmenu">Выпадающее меню</sentence>
+    <sentence id="a45" label="ocinterface">Открыть редактор кода</sentence>
+    <sentence id="a46" label="clrch">Цвет</sentence>
+    <sentence id="a47" label="pglink">Ссылка на страницу</sentence>
+    <sentence id="a48" label="objlist">Список объектов</sentence>
+    <sentence id="a49" label="lnkbase">Link base</sentence>
+    <sentence id="a50" label="exteditor">Внешний редактор</sentence>
+    <sentence id="a51" label="title">Заголовок</sentence>
+    <sentence id="a52" label="info">Информация</sentence>
+    <sentence id="a53" label="rmattr">Убрать атрибут</sentence>
+    <sentence id="a54" label="apply">Применить</sentence>
+    <sentence id="a55" label="restore">Вернуть</sentence>
+    <sentence id="a56" label="add">Добавить</sentence>
+    <sentence id="a57" label="remove">Убрать</sentence>
+    <sentence id="a58" label="cancel">Отмена</sentence>
+    <sentence id="a59" label="language">Язык</sentence>
+    <sentence id="a60" label="container">Контейнер</sentence>
+    <sentence id="a61" label="codeeditor">Редактор кода</sentence>
+    <sentence id="a62" label="back">Назад</sentence>
+    <sentence id="a63" label="tooltip">Вы должны выбрать уникальное имя для объекта (возможны только латинские символы!)</sentence>
+    <sentence id="a64" label="tooltip">Уникальный идентификатор этого объекта</sentence>
+    <sentence id="a65" label="message">Вы хотите продолжить операцию?</sentence>
+    <sentence id="a66" label="label">Удалить атрибут</sentence>
+    <sentence id="a67" label="message">Извините, вы уже имеете такой же.</sentence>
+    <sentence id="a68" label="label">Добавление языка</sentence>
+    <sentence id="a69" label="message">Извините, вы не можете удалить последний язык</sentence>
+    <sentence id="a70" label="label">Удаление языка</sentence>
+    <sentence id="a71" label="length">Длина</sentence>
+    <sentence id="a72" label="tooltip">Открывает редактор кода XML. Чтобы использовать редактор кода, вы должны переключить Тип Интерфейса на [Расширенный]</sentence>
+    <sentence id="a73" label="displaytext">Отображаемый текст</sentence>
+    <sentence id="a74" label="value">Значение</sentence>
 </language>
 </root>
