A lot of changes :) Attributes, Language, etc
git-svn-id: http://svn.vdombox.ru/flextools/trunk@708 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/langs/translation.xml
+++ b/IDE/Vdom/langs/translation.xml
@@ -1,89 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <root>
-<language ID="EN" label="English">
+<Language Code="EN" label="English">
 	<!-- Begin Login Form -->
-	<sentence ID="b1" label="login_username">Username</sentence>
-	<sentence ID="b2" label="login_password">Password</sentence>
-	<sentence ID="b3" label="login_sendbutton">Login</sentence>
+	<Sentence ID="b1" label="login_username">Username</Sentence>
+	<Sentence ID="b2" label="login_password">Password</Sentence>
+	<Sentence ID="b3" label="login_ip">IP</Sentence>
+	<Sentence ID="b4" label="login_sendbutton">Login</Sentence>
 	<!-- End Login Form -->
 	
 	<!-- Begin Main Tab -->
-	<sentence ID="c1" label="main_title">Application(s) management</sentence>
-	<sentence ID="c2" label="main_new">New</sentence>
-	<sentence ID="c3" label="main_steps">5 steps</sentence>
-	<sentence ID="c4" label="main_search">Search</sentence>
-	<sentence ID="c5" label="main_applist">Application list</sentence>
-	<sentence ID="c6" label="main_appinfo">Application information</sentence>
+	<Sentence ID="c1" label="main_title">Application(s) management</Sentence>
+	<Sentence ID="c2" label="main_new">New</Sentence>
+	<Sentence ID="c3" label="main_steps">5 steps</Sentence>
+	<Sentence ID="c4" label="main_search">Search</Sentence>
+	<Sentence ID="c5" label="main_applist">Application list</Sentence>
+	<Sentence ID="c6" label="main_appinfo">Application information</Sentence>
 	<!-- End Main Tab -->
 	
 	<!-- Begin Edit Tab -->
-	<sentence ID="d1" label="editor_title">Editor</sentence>
-	<sentence ID="d2" label="editor_edition">Edition</sentence>
-	<sentence ID="d3" label="editor_script">Script</sentence>
-	<sentence ID="d4" label="editor_preview">Preview</sentence>
-	<sentence ID="d5" label="editor_tree">Tree</sentence>
-	<sentence ID="d6" label="editor_analyse">Analyse</sentence>
-	<sentence ID="d7" label="editor_statistics">Statistics</sentence>
-	<sentence ID="d8" label="editor_events">Events</sentence>
+	<Sentence ID="d1" label="editor_title">Editor</Sentence>
+	<Sentence ID="d2" label="editor_edition">Edition</Sentence>
+	<Sentence ID="d3" label="editor_script">Script</Sentence>
+	<Sentence ID="d4" label="editor_preview">Preview</Sentence>
+	<Sentence ID="d5" label="editor_tree">Tree</Sentence>
+	<Sentence ID="d6" label="editor_analyse">Analyse</Sentence>
+	<Sentence ID="d7" label="editor_statistics">Statistics</Sentence>
+	<Sentence ID="d8" label="editor_events">Events</Sentence>
 	<!-- End Edit Tab -->
 	
 	<!-- Begin Multilingual Tab -->
-	<sentence ID="e1" label="mling_title">Multilingual management</sentence>
+	<Sentence ID="e1" label="mling_title">Multilingual management</Sentence>
 	<!-- End Multilingual Tab -->
 	
 	<!-- Begin PortalManagment Tab -->
-	<sentence ID="f1" label="portal_title">Portal management</sentence>
+	<Sentence ID="f1" label="portal_title">Portal management</Sentence>
 	<!-- End PortalManagment Tab -->
 	
 	<!-- Begin Publish Tab -->
-	<sentence ID="g1" label="publish_title">Publish</sentence>
+	<Sentence ID="g1" label="publish_title">Publish</Sentence>
 	<!-- End Publish Tab -->
 	
 	<!-- Begin Safeguard Tab -->
-	<sentence ID="h1" label="safe_title">Safeguard</sentence>
+	<Sentence ID="h1" label="safe_title">Safeguard</Sentence>
 	<!-- End Safeguard Tab -->
 	
 	<!-- Begin VDOM Tab -->
-	<sentence ID="i1" label="vdom_title">V.D.O.M</sentence>
+	<Sentence ID="i1" label="vdom_title">V.D.O.M</Sentence>
 	<!-- End VDOM Tab -->
-</language>
-<language ID="RU" label="Русский">
+</Language>
+<Language Code="RU" label="Русский">
     <!-- Начало Login Form -->
-	<sentence ID="b1" label="login_username">Логин</sentence>
-	<sentence ID="b2" label="login_password">Пароль</sentence>
-	<sentence ID="b3" label="login_sendbutton">Отправить</sentence>
+	<Sentence ID="b1" label="login_username">Логин</Sentence>
+	<Sentence ID="b2" label="login_password">Пароль</Sentence>
+	<Sentence ID="b4" label="login_sendbutton">Отправить</Sentence>
 	<!-- Конец Login Form -->
 	
 	<!-- Начало Main Tab -->
-	<sentence ID="c1" label="main_title">Менеджер приложений</sentence>
-	<sentence ID="c2" label="main_new">Новый</sentence>
-	<sentence ID="c3" label="main_steps">5 шагов</sentence>
-	<sentence ID="c4" label="main_search">Поиск</sentence>
-	<sentence ID="c5" label="main_applist">Список прил.</sentence>
-	<sentence ID="c6" label="main_appinfo">Информация</sentence>
+	<Sentence ID="c1" label="main_title">Менеджер приложений</Sentence>
+	<Sentence ID="c2" label="main_new">Новый</Sentence>
+	<Sentence ID="c3" label="main_steps">5 шагов</Sentence>
+	<Sentence ID="c4" label="main_search">Поиск</Sentence>
+	<Sentence ID="c5" label="main_applist">Список прил.</Sentence>
+	<Sentence ID="c6" label="main_appinfo">Информация</Sentence>
 	<!-- Конец Main Tab -->
 	
 	<!-- Начало Edit Tab -->
-	<sentence ID="d1" label="editor_title">Редактор</sentence>
-	<sentence ID="d2" label="editor_edition">Редактир.</sentence>
-	<sentence ID="d3" label="editor_script">Скрипты</sentence>
-	<sentence ID="d4" label="editor_preview">Просмотр</sentence>
-	<sentence ID="d5" label="editor_tree">Дерево</sentence>
-	<sentence ID="d6" label="editor_analyse">Анализ</sentence>
-	<sentence ID="d7" label="editor_statistics">Статистика</sentence>
-	<sentence ID="d8" label="edit_events">События</sentence>
+	<Sentence ID="d1" label="editor_title">Редактор</Sentence>
+	<Sentence ID="d2" label="editor_edition">Редактир.</Sentence>
+	<Sentence ID="d3" label="editor_script">Скрипты</Sentence>
+	<Sentence ID="d4" label="editor_preview">Просмотр</Sentence>
+	<Sentence ID="d5" label="editor_tree">Дерево</Sentence>
+	<Sentence ID="d6" label="editor_analyse">Анализ</Sentence>
+	<Sentence ID="d7" label="editor_statistics">Статистика</Sentence>
+	<Sentence ID="d8" label="edit_events">События</Sentence>
 	<!-- Конец Edit Tab -->
 	
 	<!-- Начало Multilingual Tab -->
-	<sentence ID="e1" label="mling_title">Менеджер языков</sentence>
+	<Sentence ID="e1" label="mling_title">Менеджер языков</Sentence>
 	<!-- Конец Multilingual Tab -->
 	
 	<!-- Начало PortalManagment Tab -->
-	<sentence ID="f1" label="portal_title">Менеджер портала</sentence>
+	<Sentence ID="f1" label="portal_title">Менеджер портала</Sentence>
 	<!-- Конец PortalManagment Tab -->
 	
 	<!-- Начало Publish Tab -->
-	<sentence ID="g1" label="publish_title">Публикация</sentence>
+	<Sentence ID="g1" label="publish_title">Публикация</Sentence>
 	<!-- Конец Publish Tab -->
 	
 	<!-- Начало Safeguard Tab -->
@@ -93,5 +94,5 @@
 	<!-- Начало VDOM Tab -->
 
 	<!-- Конец VDOM Tab -->
-</language>
+</Language>
 </root>
