--- a/IDE/Vdom/langs/languages.xml
+++ b/IDE/Vdom/langs/languages.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <root>
-	<language id="EN" label="English"/>
-	<language id="RU" label="Russian"/>
-	<language id="FR" label="French"/>
+	<Language Code="EN" label="English"/>
+	<Language Code="RU" label="Russian"/>
+	<Language Code="FR" label="French"/>
 </root>
