git-svn-id: http://svn.vdombox.ru/flextools/trunk@914 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/lang/english.xml
+++ b/PowerPack/v.01/lang/english.xml
@@ -95,7 +95,7 @@
 
 	<graphcanvas>
 		<menuitemadd>Add State</menuitemadd>		
-		<menuitempaste>Paste</menuitempaste>
+		<menuitempaste>Paste State</menuitempaste>
 		<menuitemclear>Clear Stage</menuitemclear>
 	</graphcanvas> 
 
