git-svn-id: http://svn.vdombox.ru/flextools/trunk@920 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/lang/english.xml
+++ b/PowerPack/v.01/lang/english.xml
@@ -13,7 +13,7 @@
 	<navigatorpanel>
 		<title>VDOM Application</title>
 		<graphs>	
-			<title>Graphs</title>
+			<title>Application</title>
 			<btnnew>New</btnnew>
 			<btnrename>Rename</btnrename>
 			<btndelete>Delete</btndelete>
