git-svn-id: http://svn.vdombox.ru/flextools/trunk@958 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/lang/english.xml
+++ b/PowerPack/v.01/lang/english.xml
@@ -45,6 +45,9 @@
         </menuitem>        
         <menuitem label="Help" data="help">
         </menuitem>
+        <menuitem label="Generator">
+        	<menuitem label="Run" id="generate"/>
+        </menuitem>
     </mainmenu>
     
     <filebrowse>
