--- a/IDE/Vdom/locale/en_US/Application.properties
+++ b/IDE/Vdom/locale/en_US/Application.properties
@@ -7,17 +7,17 @@ main_applist = Application list
 main_appinfo = Application information
 
 # Edit Tab
-edit_title = EDITOR
-edit_edition = Edition
-edit_script = Script
-edit_preview = Preview
-edit_tree = Tree
-edit_analyse = Analyse
-edit_statistics = Statistics
-edit_events = Events
-edit_news = News
-edit_save = Save
-edit_cancel = Cancel
+editor_title = EDITOR
+editor_edition = Edition
+editor_script = Script
+editor_preview = Preview
+editor_tree = Tree
+editor_analyse = Analyse
+editor_statistics = Statistics
+editor_events = Events
+editor_news = News
+editor_save = Save
+editor_cancel = Cancel
 
 # Multilingual Tab
 multilingual_title = MULTILINGUAL MANAGMENT
