--- a/IDE/Vdom/locale/ru_RU/Application.properties
+++ b/IDE/Vdom/locale/ru_RU/Application.properties
@@ -7,17 +7,17 @@ main_applist = Список прил.
 main_appinfo = Информация
 
 # Edit Tab
-edit_title = Редактор
-edit_edition = Редактир.
-edit_script = Скрипты
-edit_preview = Просмотр
-edit_tree = Дерево
-edit_analyse = Анализ
-edit_statistics = Статистика
-edit_events = События
-edit_news = Новости
-edit_save = Сохранить
-edit_cancel = Отменить
+editor_title = Редактор
+editor_edition = Редактир.
+editor_script = Скрипты
+editor_preview = Просмотр
+editor_tree = Дерево
+editor_analyse = Анализ
+editor_statistics = Статистика
+editor_events = События
+editor_news = Новости
+editor_save = Сохранить
+editor_cancel = Отменить
 
 # Multilingual Tab
 multilingual_title = Менеджер языков
