git-svn-id: http://svn.vdombox.ru/flextools/trunk@1265 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/en_US/Application.properties
+++ b/IDE/Vdom/locale/en_US/Application.properties
@@ -17,7 +17,7 @@ editor_statistics = Statistics
 editor_events = Events
 editor_news = News
 editor_save = Save
-editor_cancel = Cancel
+editor_delete = Delete
 
 # Multilingual Tab
 multilingual_title = MULTILINGUAL MANAGMENT
