--- a/IDE/Vdom/locale/ru_RU/Application.properties
+++ b/IDE/Vdom/locale/ru_RU/Application.properties
@@ -17,7 +17,7 @@ editor_statistics = Статистика
 editor_events = События
 editor_news = Новости
 editor_save = Сохранить
-editor_cancel = Отменить
+editor_delete = Удалить
 
 # Multilingual Tab
 multilingual_title = Менеджер языков
