git-svn-id: http://svn.vdombox.ru/flextools/trunk@2159 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/fr_FR/Tree.properties
+++ b/IDE/Vdom/locale/fr_FR/Tree.properties
@@ -2,7 +2,7 @@ level = Level
 levels = Levels
 auto_Spacing = Auto spacing
 
-new_page = New page
+new_page = New Page
 title = Title
 description = description
 select_type = Select type
