--- a/IDE/Vdom/locale/ru_RU/Tree.properties
+++ b/IDE/Vdom/locale/ru_RU/Tree.properties
@@ -1,6 +1,9 @@
 level = Уровень
 levels = Уровни
 auto_Spacing = Построить дерево
+expand_all = Раскрыть все
+do_you_want_to_delete_element = Удаиль эту станицу?
+delete_element = Delete Element
 
 new_page = Новая страница
 title = Название
