--- a/IDE/Vdom/locale/en_US/LoginForm.properties
+++ b/IDE/Vdom/locale/en_US/LoginForm.properties
@@ -1,7 +1,7 @@
 title = PLEASE ENTER YOUR USERNAME AND PASSWORD BELOW
 username = USERNAME:
 password = PASSWORD:
-ip = VDOMBOX IP:
+hostname = VDOMBOX IP:
 language = LANGUAGE:
 ok_button = OK
 quit_button = QUIT
