same change in Tree
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2448 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/en_US/Tree.properties
+++ b/IDE/Vdom/locale/en_US/Tree.properties
@@ -2,6 +2,7 @@ level = Level
 levels = Levels
 auto_Spacing = Auto spacing
 expand_all = Expand all
+show_signature = Show signature
 do_you_want_to_delete_element = Do you want to delete Element?
 delete_element = Delete Element
 
