--- a/IDE/Vdom/locale/fr_FR/Tree.properties
+++ b/IDE/Vdom/locale/fr_FR/Tree.properties
@@ -3,6 +3,7 @@ levels = Levels
 auto_Spacing = Auto spacing
 expand_all = Expand all
 do_you_want_to_delete_element = Do you want to delete Element?
+show_signature = Show signature
 delete_element = Delete Element
 
 new_page = New Page
