--- a/IDE/Vdom/locale/ru_RU/Tree.properties
+++ b/IDE/Vdom/locale/ru_RU/Tree.properties
@@ -3,6 +3,7 @@ levels = Уровни
 auto_Spacing = Построить дерево
 expand_all = Раскрыть все
 do_you_want_to_delete_element = Удаиль эту станицу?
+show_signature = Показать подписи
 delete_element = Delete Element
 
 new_page = Новая страница
