Localization AttributesPAnel title fix for localization
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2599 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/en_US/ApplicationManagment.properties
+++ b/IDE/Vdom/locale/en_US/ApplicationManagment.properties
@@ -6,12 +6,16 @@ information_pages = Pages:
 information_objects = Objects:
 
 # ApplicationProperties component
+properties_title = APPLICATION PROPERTIES
 properties_icon = Illustration
 properties_name = Name
 properties_name_prompt = Application Name
 properties_description = Description
 properties_description_prompt = Application Description
 properties_edit = EDIT APPLICATION
+
+# CreateApplication component
+create_title = CREATE APPLICATION
 
 # EditApplication component
 edit_title = EDIT APPLICATION
