--- a/IDE/Vdom/locale/ru_RU/Edit.properties
+++ b/IDE/Vdom/locale/ru_RU/Edit.properties
@@ -4,3 +4,20 @@ form = Формы
 table = Таблицы
 database = Базы данных
 debug = Отладка
+
+# AttributesPanel
+attributes_title = Свойства объекта
+attributes_save = Сохранить
+attributes_delete = Удалить
+
+# HelpPanel
+help_title = Помощь
+
+# ObjectsPanel
+pages_title = Страницы
+
+# WorkArea
+workarea_label = WYSIWYG
+
+# XMLPresentationEditor
+xmleditor_label = VDOM XML
