--- a/IDE/Vdom/locale/ru_RU/ApplicationManagment.properties
+++ b/IDE/Vdom/locale/ru_RU/ApplicationManagment.properties
@@ -1,32 +1,36 @@
 # Search panel
-search_find = Find
+search_find = Найти
 
 # ApplicationInformation panel
-information_pages = Pages:
-information_objects = Objects:
+information_pages = Страницы:
+information_objects = Объекты:
 
 # ApplicationProperties component
-properties_icon = Illustration
-properties_name = Name
-properties_name_prompt = Application Name
-properties_description = Description
-properties_description_prompt = Application Description
-properties_edit = EDIT APPLICATION
+properties_title = Свойства приложения
+properties_icon = Иконка
+properties_name = Имя
+properties_name_prompt = Имя приложения
+properties_description = Описание
+properties_description_prompt = Описание приложения
+properties_edit = Редактирование приложения
+
+# CreateApplication component
+create_title = Создать приложение
 
 # EditApplication component
-edit_title = EDIT APPLICATION
+edit_title = Редактирование приложения
 
 # SearchResult component
-expand_label = Expand All
-collapse_label = Collapse All
-goto_label = Go to Editor
-name_label = Application Name:
+expand_label = Раскрыть всё
+collapse_label = Свернуть всё
+goto_label = К Редактору
+name_label = Имя приложения:
 
 # ApplicationEditor component
-icon_title = Illustration
-name_title = Name
-name_prompt = Application Name
-description_title = Description
-description_prompt = Application Description
+icon_title = Иконка
+name_title = Имя
+name_prompt = Имя приложения
+description_title = Описание
+description_prompt = Описание приложения
 submit_label = OK
-cancel_label = CANCEL
+cancel_label = Отмена
