Localization Components fix for localization
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2600 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/en_US/ApplicationManagment.properties
+++ b/IDE/Vdom/locale/en_US/ApplicationManagment.properties
@@ -6,19 +6,19 @@ information_pages = Pages:
 information_objects = Objects:
 
 # ApplicationProperties component
-properties_title = APPLICATION PROPERTIES
+properties_title = Applcation properties
 properties_icon = Illustration
 properties_name = Name
 properties_name_prompt = Application Name
 properties_description = Description
 properties_description_prompt = Application Description
-properties_edit = EDIT APPLICATION
+properties_edit = Edit
 
 # CreateApplication component
-create_title = CREATE APPLICATION
+create_title = Create application
 
 # EditApplication component
-edit_title = EDIT APPLICATION
+edit_title = Edit application
 
 # SearchResult component
 expand_label = Expand All
@@ -32,5 +32,5 @@ name_title = Name
 name_prompt = Application Name
 description_title = Description
 description_prompt = Application Description
-submit_label = OK
-cancel_label = CANCEL
+submit_label = Ok
+cancel_label = Cancel
