--- a/IDE/Vdom/locale/fr_FR/Edit.properties
+++ b/IDE/Vdom/locale/fr_FR/Edit.properties
@@ -1,6 +1,23 @@
 # TypeAccordion
 standard = Standard
-form = Formulaire
-table = Tableau
-database = Base de donnee
+form = Form
+table = Table
+database = Database
 debug = Debug
+
+# AttributesPanel
+attributes_title = Object properties
+attributes_save = Save
+attributes_delete = Delete
+
+# HelpPanel
+help_title = Help
+
+# ObjectsPanel
+pages_title = Pages
+
+# WorkArea
+workarea_label = WYSIWYG
+
+# XMLPresentationEditor
+xmleditor_label = VDOM XML
