--- a/IDE/Vdom/locale/ru_RU/ApplicationManagment.properties
+++ b/IDE/Vdom/locale/ru_RU/ApplicationManagment.properties
@@ -12,7 +12,7 @@ properties_name = Имя
 properties_name_prompt = Имя приложения
 properties_description = Описание
 properties_description_prompt = Описание приложения
-properties_edit = Редактирование приложения
+properties_edit = Редактирование
 
 # CreateApplication component
 create_title = Создать приложение
@@ -32,5 +32,5 @@ name_title = Имя
 name_prompt = Имя приложения
 description_title = Описание
 description_prompt = Описание приложения
-submit_label = OK
+submit_label = Ok
 cancel_label = Отмена
