--- a/IDE/Vdom/locale/fr_FR/ApplicationManagment.properties
+++ b/IDE/Vdom/locale/fr_FR/ApplicationManagment.properties
@@ -6,15 +6,19 @@ information_pages = Pages:
 information_objects = Objects:
 
 # ApplicationProperties component
+properties_title = Applcation properties
 properties_icon = Illustration
 properties_name = Name
 properties_name_prompt = Application Name
 properties_description = Description
 properties_description_prompt = Application Description
-properties_edit = EDIT APPLICATION
+properties_edit = Edit
+
+# CreateApplication component
+create_title = Create application
 
 # EditApplication component
-edit_title = EDIT APPLICATION
+edit_title = Edit application
 
 # SearchResult component
 expand_label = Expand All
@@ -28,5 +32,5 @@ name_title = Name
 name_prompt = Application Name
 description_title = Description
 description_prompt = Application Description
-submit_label = OK
-cancel_label = CANCEL
+submit_label = Ok
+cancel_label = Cancel
