git-svn-id: http://svn.vdombox.ru/flextools/trunk@2639 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/en_US/Tree.properties
+++ b/IDE/Vdom/locale/en_US/Tree.properties
@@ -13,3 +13,8 @@ select_type = Select type
 select_image = Select image
 cancel = Cancel 
 set_default = set default
+
+min_max = Minimize/Maximize
+create_line = Create line
+delete = Delete
+set_start_page = Set start page
