--- a/IDE/Vdom/locale/ru_RU/Tree.properties
+++ b/IDE/Vdom/locale/ru_RU/Tree.properties
@@ -13,3 +13,8 @@ select_type = Тип
 select_image = Выбрать картинку
 cancel = Отмена 
 set_default = set default
+
+min_max = Мин/Макс
+create_line = Создать линию
+delete = Удалить
+set_start_page = Сделать стартовой страницей
