Localization fix in TypeAccordion & AttributesPanel
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2645 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/ru_RU/Edit.properties
+++ b/IDE/Vdom/locale/ru_RU/Edit.properties
@@ -9,6 +9,7 @@ debug = Отладка
 attributes_title = Свойства объекта
 attributes_save = Сохранить
 attributes_delete = Удалить
+attributes_name = Имя
 
 # HelpPanel
 help_title = Помощь
