--- a/IDE/Vdom/locale/en_US/Edit.properties
+++ b/IDE/Vdom/locale/en_US/Edit.properties
@@ -9,6 +9,7 @@ debug = Debug
 attributes_title = Object properties
 attributes_save = Save
 attributes_delete = Delete
+attributes_name = Name
 
 # HelpPanel
 help_title = Help
