Locale change (error) Login form change (#175) some fix with wrong data in renderManager, TransformMarker
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2715 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/en_US/Error.properties
+++ b/IDE/Vdom/locale/en_US/Error.properties
@@ -1,32 +1,32 @@
 # Server level
-101 = неправильный ключ сессии
-102 = неправильный логин или пароль
-103 = неправильный идентификатор типа
-104 = virtual host name уже используется
-105 = приложение уже установлено
-106 = ошибка установки приложения
+101 = incorrect session key
+102 = login incorrect
+103 = invalid type id
+104 = virtual host name is already in use
+105 = application is already installed
+106 = installation error
 
 # Application level
-201 = ошибка записи атрибутов приложения
-202 = неправильный формат структуры приложения
-203 = неправильный идентификатор приложения
+201 = application attribute modification error
+202 = invalid application structure
+203 = invalid application id
 
 # Object level
-301 = недопустимый объект (объект существует, но не может быть использован в данной операции)
-302 = неправильный идентификатор родительского объекта
-303 = ошибка удаления объекта
-304 = неправильный идентификатор объекта
-305 = неправильный формат XML Script
-306 = ошибка переименования объекта
-307 = неправильное значение атрибута
-308 = ошибка удаленного вызова метода объекта
-309 = ошибка рендеринга объекта (wysiwyg)
+301 = incorrect object
+302 = invalid parent object id
+303 = delete object error
+304 = invalid object id
+305 = incorrect XML Script format
+306 = rename object error
+307 = incorrect attribute value
+308 = remote method call error
+309 = wysiwyg render error
 
 # Resource level
-401 = ресурс не найден
-402 = ошибка редактирования ресурса
+401 = resource not found
+402 = resource modification error
 
 # Script level
 
 # Event level
-601 = неправильный формат
+601 = incorrect format
