added button "Revert" to EventEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2959 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/en_US/Tree.properties
+++ b/IDE/Vdom/locale/en_US/Tree.properties
@@ -1,5 +1,5 @@
 level = Level
-levels = Levels!!!
+levels = Levels
 auto_Spacing = Auto spacing
 expand_all = Expand all
 show_signature = Show signature
