git-svn-id: http://svn.vdombox.ru/flextools/trunk@3301 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/locale/en_US/Tree.properties
+++ b/IDE/Vdom/locale/en_US/Tree.properties
@@ -8,7 +8,7 @@ delete_element = Delete Element
 
 new_page = New page
 title = Title
-description = description
+description = Description
 select_type = Select type
 select_image = Select image
 cancel = Cancel 
@@ -18,3 +18,11 @@ min_max = Minimize/Maximize
 create_line = Create line
 delete = Delete
 set_start_page = Set start page
+
+menu = Menu
+undo = Undo
+save = Save
+image = Image
+start = Start
+palese_select = Please select type of new Container
+properties = Properties
