--- a/IDE/Vdom/locale/ru_RU/Tree.properties
+++ b/IDE/Vdom/locale/ru_RU/Tree.properties
@@ -18,3 +18,12 @@ min_max = Мин/Макс
 create_line = Создать линию
 delete = Удалить
 set_start_page = Сделать стартовой страницей
+
+
+menu = Меню
+undo = Вернут
+save = Сохранить
+image = Картина
+start = Старт
+palese_select = Пожалуйста выберите тип нового контейнера
+properties = Свойства
