change Design in TreeEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@3731 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/locale/en_US/Tree.properties
+++ b/IDE/v.01/locale/en_US/Tree.properties
@@ -9,6 +9,7 @@ delete_element = Delete Element
 new_page = New page
 title = Title
 description = Description
+no_description = No description
 select_type = Select type
 select_image = Select image
 cancel = Cancel 
