git-svn-id: http://svn.vdombox.ru/flextools/trunk@4888 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/src/locale/ru_RU/LoginForm.properties
+++ b/IDE/v.01Core/src/locale/ru_RU/LoginForm.properties
@@ -1,5 +1,5 @@
-﻿title = ВВЕДИТЕ ЛОГИН И ПАРОЛЬ
-username = ЛОГИН:
-password = ПАРОЛЬ:
-language = ЯЗЫК:
-quit_button = ВЫХОД
+title = Введите логин и пароль
+username = Логин
+password = Пароль
+language = Язык
+quit_button = Выход
