--- a/IDE/v.01Core/src/locale/en_US/LoginForm.properties
+++ b/IDE/v.01Core/src/locale/en_US/LoginForm.properties
@@ -1,7 +1,7 @@
-title = PLEASE ENTER YOUR USERNAME AND PASSWORD BELOW
-username = USERNAME:
-password = PASSWORD:
-hostname = VDOMBOX IP:
-language = LANGUAGE:
-ok_button = OK
-quit_button = QUIT
+title = Please enter your Username and Password below
+username = Username
+password = Password
+hostname = Server IP
+language = Language
+ok_button = Connect
+quit_button = Exit
