--- a/IDE/v.01Core/src/locale/fr_FR/LoginForm.properties
+++ b/IDE/v.01Core/src/locale/fr_FR/LoginForm.properties
@@ -1,7 +1,6 @@
 title = Entrer votre nom d'utilisateur et mot de passe 
-username = UTILISATEUR:
-password = MOT DE PASSE:
-hostname = VDOMBOX IP:
-language = LANGUE:
-ok_button = OK
-quit_button = QUITTER
+username = Utilisateur
+password = Mot de passe
+hostname = Server IP
+language = Langue
+quit_button = Quitter
